# oregon_voters

./: .gitignore  README.md  oregon_voters.code-workspace  pyproject.toml
src/: __init__.py  oregon-voters.py  voters_extract.py  voters_load.py  voters_load_database.py  voters_transform.py
src/daily_voted/: daily_voted_etl.py  run_extract.py
src/data_contracts/: daily_voted_data_contract.py  omv_data_contract.py  precinct_data_contract.py  votehistory_data_contract.py  voterfile_data_contract.py
src/election/: __init__.py  daily_voted_etl.py  elections_data_contract.py
src/omv/: omv_etl.py  run_extract.py
src/precinct/: precinct_data_contract.py  precincts_etl.py  run_extract.py
src/utils/: arg_parser.py  config.py  data_contract.py  database.py  dataframe_operations.py  file_operations.py  search.py  transformations.py
src/votehistory/: __init__.py  history_extract.py  history_load.py  history_transform.py  run_extract.py  run_load.py  votehistory_data_contract.py
src/voterfile/: run_extract.py  voterfile_data_contract.py  voters_extract.py  voters_load.py  voters_load_database.py  voters_load_elasticsearch.py  voters_transform.py
src/voterfile/transformations/: address_passes.py
testing/: docker-compose.yml  logstash.conf
