[tool.poetry]
name = "oregon-voters"
version = "0.1.0"
description = ""
authors = ["Mark Parrish <mark@pipcommunications.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^1.5"
eland = "^8.12.0"
elasticsearch = "^8.11.1"
tqdm = "^4.66.1"
argparse = "^1.4.0"
common_functions = {path = "/Users/markparrish/pip/data_processing/common_functions", develop = true}
pyarrow = "^14.0.2"
python-dotenv = "^1.0.0"
pandarallel = "^1.6.5"
sqlalchemy = "^2.0.25"
pymysql = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
